--- a/src/main/resources/templates/forgot-password.html
+++ b/src/main/resources/templates/forgot-password.html
@@ -10,6 +10,7 @@
     <meta name="author" content="">
 
     <title>SCU Course - 忘记密码</title>
+    <link rel="icon" type="image/x-icon" href="/images/icon.ico">
 
     <!-- Custom fonts for this template-->
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -48,14 +49,14 @@
                                         </div>
                                         <div class="form-group row">
                                             <div class="col-sm">
-                                                <input name="code" class="form-control form-control-user" placeholder="验证码">
+                                                <input name="code" class="form-control form-control-user" type="number" placeholder="验证码">
                                             </div>
                                             <div class="col-sm">
                                                 <button name="action" value="send" type="submit" class="btn btn-primary btn-user btn-block">发送验证码</button>
                                             </div>
                                         </div>
                                         <div class="form-group">
-                                            <input name="newPassword" class="form-control form-control-user" placeholder="新密码">
+                                            <input name="newPassword" class="form-control form-control-user" type="password" placeholder="新密码">
                                         </div>
                                         <button name="action" value="reset" type="submit" class="btn btn-primary btn-user btn-block">重置密码</button>
                                     </form>
