--- a/src/main/resources/templates/homework-detail.html
+++ b/src/main/resources/templates/homework-detail.html
@@ -10,11 +10,11 @@
     <meta name="author" content="">
 
     <title th:text="|${currentCourse} - 作业详情|"></title>
+    <link rel="icon" type="image/x-icon" href="/images/icon.ico">
 
     <!-- Custom fonts for this template-->
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
-    <link
-            href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
+    <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
             rel="stylesheet">
 
     <!-- Custom styles for this template-->
@@ -131,16 +131,16 @@
                                  aria-labelledby="userDropdown">
                                 <a class="dropdown-item" href="#">
                                     <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
-                                    Profile
+                                    个人信息
                                 </a>
                                 <a class="dropdown-item" href="#">
                                     <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>
-                                    Settings
+                                    设置
                                 </a>
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
                                     <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
-                                    Logout
+                                    FLogout
                                 </a>
                             </div>
                         </li>
@@ -158,7 +158,7 @@
 
                     <div class="card shadow mb-4">
                         <div class="card-header py-3">
-                            <h6 class="m-0 font-weight-bold text-primary">基本信息</h6>
+                            <h6 class="navbar-brand font-weight-bold text-primary ml-3">基本信息</h6>
                         </div>
                         <div class="card-body">
                             <div class="row no-gutters">
@@ -194,7 +194,16 @@
 
                     <div class="card shadow mb-4">
                         <div class="card-header py-3">
-                            <h6 class="m-0 font-weight-bold text-primary">详细信息</h6>
+                            <nav class="navbar">
+                                <span class="navbar-brand font-weight-bold text-primary">详细信息</span>
+                                <ul class="navbar-nav ml-auto">
+                                    <li class="nav-item">
+                                        <a th:href="|/homeworkDetailExport?homeworkId=${homeworkDetail.id}|">
+                                            <button class="btn btn-primary">导出表格</button>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </nav>
                         </div>
                         <div class="card-body">
                             <div class="table-responsive">
@@ -262,15 +271,15 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
+                    <h5 class="modal-title" id="exampleModalLabel">确定退出吗？</h5>
                     <button class="close" type="button" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">×</span>
                     </button>
                 </div>
-                <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
+                <div class="modal-body">将清除登录信息，并离开系统</div>
                 <div class="modal-footer">
-                    <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-                    <a class="btn btn-primary" href="userLogout">Logout</a>
+                    <button class="btn btn-secondary" type="button" data-dismiss="modal">取消</button>
+                    <a class="btn btn-primary" href="userLogout">退出</a>
                 </div>
             </div>
         </div>
