--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -10,6 +10,7 @@
     <meta name="author" content="">
 
     <title>SCU Course - 登录</title>
+    <link rel="icon" type="image/x-icon" href="/images/icon.ico">
 
     <!-- Custom fonts for this template-->
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
